Rewrite Getter for Main-Config
- Read the Json values from the config file to the Config.java record
- Replaced the old methods
- rename package "controller" to "config"
- Add blank config.json

- Add WebhookAppender